--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-
+// Only here to redirect to default locale
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Pascal Luxain" />
+    <meta http-equiv="refresh" content="0;url=/en/" />
+    <meta name="robots" content="noindex" />
+    <link rel="canonical" href="/en/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Redirecting to: /en/</title>
+  </head>
+  <body>
+    <a href="/en/">Redirecting from <code>/</code> to <code>/en/</code></a>
+  </body>
 </html>
