--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,6 +20,7 @@ const { description, pageTitle, robots = "index, follow" } = props;
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content={robots} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{pageTitle}</title>
   </head>
   <body class="flex h-screen flex-col">
