--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,6 +27,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   // Note: for some reason cannot use String interpolation/template
   "/src/assets/images/design/*.svg",
 );
+const { currentLocale } = Astro;
 ---
 
 <footer
@@ -35,8 +36,15 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   <div
     class="flex flex-col-reverse items-center md:flex-row md:justify-between"
   >
-    <p>&copy; 2024 {m.le_chainon_manquant_studio()}</p>
-    <p>-- {m.moto()}.</p>
+    <p>&copy; 2024 Le ChaînoN ManQuanT</p>
+    <p>
+      --
+      <Link
+        href={`https://luxain.solutions/${currentLocale}/`}
+        hreflang={currentLocale}
+        rel="external follow">Luxain Solutions, e.U.</Link
+      >
+    </p>
   </div>
   <hr />
   <div class="flex flex-row items-stretch justify-between gap-1">
