ref(design): rename logo Component and use the new styling approach
- add icon Component

Ref: #15

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,7 +1,7 @@
 ---
 import * as m from "@messages/messages";
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { Logo } from "@components";
+import { LcnmqtLogo } from "@components";
 
 const pageTitle = m.index_title();
 const description = m.index_meta_description();
@@ -10,7 +10,7 @@ const description = m.index_meta_description();
 <BaseLayout pageTitle={pageTitle} description={description}>
   <section>
     <h1 class="flex items-center justify-center">
-      <Logo class="my-10 w-56" />
+      <LcnmqtLogo class="my-10 w-56" />
     </h1>
     <p class="text-center">{description}</p>
   </section>
