--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,6 +20,11 @@ const tools = [
     href: "https://inlang.com/m/gerre34r/library-inlang-paraglideJs",
     hreflang: "en",
   },
+  {
+    text: "Nodemailer",
+    href: "https://nodemailer.com",
+    hreflang: "en",
+  },
 ];
 
 const designImagesRootPath = "/src/assets/images/design";
