feat(content): link to a page only if not self
Ref: #17

--- a/src/components/LanguageTag.astro
+++ b/src/components/LanguageTag.astro
@@ -1,5 +1,6 @@
 ---
 import { availableLanguageTags } from "@messages/runtime";
+import { SelfLink } from ".";
 
 type Props = {
   lang: (typeof availableLanguageTags)[number];
@@ -8,4 +9,4 @@ type Props = {
 const { lang } = Astro.props;
 ---
 
-<span>[{lang}]</span>
+<SelfLink text={lang} />
