--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,26 +1,43 @@
 ---
 import * as m from "@messages/messages";
-import { LanguageSwitcher, LcnmqtLogo, Link } from "./";
+import { LanguageSwitcher, LcnmqtLogo, Link, SelfLink } from ".";
 
-const { currentLocale } = Astro;
+const { currentLocale, url } = Astro;
+const navs = [
+  {
+    href: `/${currentLocale}/${m.contact_slug()}`,
+    text: m.contact_slug(),
+  },
+];
 ---
 
 <header class="flex items-center gap-2 px-2 py-4 md:px-8">
   <div class="flex-1">
-    <Link href={`/${currentLocale}/`} hreflang={currentLocale}>
-      <LcnmqtLogo class="w-24" />
-    </Link>
+    {
+      `/${currentLocale}/` === url.pathname ? (
+        <LcnmqtLogo class="w-24" />
+      ) : (
+        <Link href={`/${currentLocale}/`} hreflang={currentLocale}>
+          <LcnmqtLogo class="w-24" />
+        </Link>
+      )
+    }
   </div>
   <nav>
     <ul class="flex gap-2">
-      <li class="capitalize">
-        <Link
-          href={`/${currentLocale}/${m.contact_slug()}`}
-          hreflang={currentLocale}
-        >
-          {m.contact_slug()}
-        </Link>
-      </li>
+      {
+        navs.map(({ href, text }) => (
+          <li class="capitalize">
+            {href === url.pathname ? (
+              <SelfLink text={text} />
+            ) : (
+              <Link href={href} hreflang={currentLocale}>
+                {text}
+              </Link>
+            )}
+          </li>
+        ))
+      }
     </ul>
   </nav>
   <LanguageSwitcher />
