fix(content): change robots keyword for contact and thank you pages
Ref: #17

--- a/src/pages/[lang]/[contact].astro
+++ b/src/pages/[lang]/[contact].astro
@@ -23,7 +23,7 @@ export const getStaticPaths = (async () => {
 }) satisfies GetStaticPaths;
 ---
 
-<BaseLayout description={description} pageTitle={pageTitle} robots="nofollow">
+<BaseLayout description={description} pageTitle={pageTitle}>
   <section class="flex w-full grow flex-col justify-center md:m-auto">
     <h1
       class="py-10 text-center text-3xl font-bold [font-variant-caps:small-caps]"
