--- a/src/pages/[lang]/[thanks].astro
+++ b/src/pages/[lang]/[thanks].astro
@@ -18,7 +18,7 @@ export const getStaticPaths = (async () => {
 <BaseLayout
   description={`${pageTitle} ${notification}`}
   pageTitle={pageTitle}
-  robots="noindex"
+  robots="noindex, follow"
 >
   <section
     class="flex w-full grow flex-col justify-center text-center md:m-auto md:w-96"
