fix(content): add missing trailing space to hrefs
Ref: #24

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { LanguageSwitcher, LcnmqtLogo, Link, SelfLink } from ".";
 const { currentLocale, url } = Astro;
 const navs = [
   {
-    href: `/${currentLocale}/${m.contact_slug()}`,
+    href: `/${currentLocale}/${m.contact_slug()}/`,
     text: m.contact_slug(),
   },
 ];
