--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,6 +27,7 @@ const tools = [
 ];
 
 const { currentLocale } = Astro;
+const year = new Date().getFullYear();
 ---
 
 <footer
@@ -63,7 +64,10 @@ const { currentLocale } = Astro;
   <div
     class="flex flex-col-reverse items-center md:flex-row md:justify-between"
   >
-    <p>&copy; 2024 Le ChaînoN ManQuanT</p>
+    <p>
+      &copy;&nbsp;<span id="footer-year">{year}</span
+      >&nbsp;Le&nbsp;ChaînoN&nbsp;ManQuanT
+    </p>
     <p>
       --
       <Link
@@ -74,3 +78,6 @@ const { currentLocale } = Astro;
     </p>
   </div>
 </footer>
+<script is:inline data-astro-rerun>
+  document.getElementById("footer-year").innerText = new Date().getFullYear();
+</script>
