--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,24 +33,18 @@ const year = new Date().getFullYear();
 <footer
   class="flex flex-col gap-2 bg-primary-solid px-2 py-4 text-sm text-primary md:px-8"
 >
-  <div class="flex flex-row items-stretch justify-between gap-1">
-    <div
-      class="flex flex-col justify-between gap-1 md:flex-row md:justify-center"
-    >
+  <div class="grid grid-cols-2 items-center">
+    <div class="flex flex-col justify-start gap-1 md:flex-row">
       <div>{m.made_with()}</div>
-      <div
-        class="flex flex-col items-center justify-end gap-1 md:flex-row md:items-start"
-      >
-        {
-          tools.map(({ href, hreflang, text }) => (
-            <Link href={href} hreflang={hreflang} rel="external">
-              {text}
-            </Link>
-          ))
-        }
-      </div>
+      {
+        tools.map(({ href, hreflang, text }) => (
+          <Link href={href} hreflang={hreflang} rel="external">
+            {text}
+          </Link>
+        ))
+      }
     </div>
-    <div class="stretch flex flex-col justify-start">
+    <div class="flex items-start justify-end self-stretch md:items-center">
       <Link
         href="https://github.com/pluxain/lechainonmanquant.studio"
         hreflang="en"
