chore(tech): upgrade TailwindCSS to 4
- adjust astro config to use @tailwindcss/vite plugin instead of @astrojs/tailwind integration

Ref: #29

--- a/src/pages/[lang]/[contact].astro
+++ b/src/pages/[lang]/[contact].astro
@@ -60,12 +60,12 @@ export const getStaticPaths = (async () => {
               pattern=".+@.+\\..{2,}"
               autofocus
               autocomplete="off"
-              class="grow border-b-2 pb-1 outline-none"
+              class="grow border-b-2 pb-1 outline-hidden"
             />
             <p
               role="alert"
               aria-live="polite"
-              class="invisible text-sm text-danger peer-invalid:visible"
+              class="text-danger invisible text-sm peer-invalid:visible"
             >
               {m.error_email()}.
             </p>
@@ -82,12 +82,12 @@ export const getStaticPaths = (async () => {
               required
               minlength="5"
               autocomplete="off"
-              class="grow border-b-2 pb-1 outline-none"
+              class="grow border-b-2 pb-1 outline-hidden"
             />
             <p
               role="alert"
               aria-live="polite"
-              class="invisible text-sm text-danger peer-invalid:visible"
+              class="text-danger invisible text-sm peer-invalid:visible"
             >
               {m.error_subject()}.
             </p>
@@ -108,12 +108,12 @@ export const getStaticPaths = (async () => {
               required
               minlength="50"
               autocomplete="off"
-              class="h-32 grow resize-y border-b-2 py-1 outline-none"
+              class="h-32 grow resize-y border-b-2 py-1 outline-hidden"
             ></textarea>
             <p
               role="alert"
               aria-live="polite"
-              class="invisible text-sm text-danger peer-invalid:visible"
+              class="text-danger invisible text-sm peer-invalid:visible"
             >
               {m.error_message({ minLength: 50 })}.
             </p>
@@ -122,7 +122,7 @@ export const getStaticPaths = (async () => {
         <fieldset class="flex flex-col justify-end gap-2 sm:flex-row">
           <button
             type="reset"
-            class="flex grow items-center justify-center bg-secondary px-4 py-2 text-secondary-solid disabled:bg-secondary-accent"
+            class="bg-secondary text-secondary-solid disabled:bg-secondary-accent flex grow items-center justify-center px-4 py-2"
           >
             <span class="text">
               {m.contact_form_reset()}
@@ -131,7 +131,7 @@ export const getStaticPaths = (async () => {
           <button
             type="submit"
             disabled
-            class="flex grow items-center justify-center bg-primary px-4 py-2 text-primary-solid disabled:bg-primary-accent"
+            class="bg-primary text-primary-solid disabled:bg-primary-accent flex grow items-center justify-center px-4 py-2"
           >
             <span class="text">
               {m.contact_form_submit()}
