--- a/src/layouts/MarkdownPageLayout.astro
+++ b/src/layouts/MarkdownPageLayout.astro
@@ -5,8 +5,10 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout description={frontmatter.description} pageTitle={frontmatter.title}>
-  <article class="m-auto w-1/2 text-justify">
-    <h1 class="mb-4 text-center text-3xl font-bold">{frontmatter.title}</h1>
+  <article
+    class="prose prose-stone lg:prose-lg prose-a:text-primary max-w-none text-justify md:mx-36"
+  >
+    <h1 class="mb-4">{frontmatter.title}</h1>
     <slot />
   </article>
 </BaseLayout>
