--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ const year = new Date().getFullYear();
 ---
 
 <footer
-  class="flex flex-col gap-2 bg-primary-solid px-2 py-4 text-sm text-primary md:px-8"
+  class="bg-primary-solid text-primary mt-12 flex flex-col gap-2 px-2 py-4 text-sm md:px-8"
 >
   <div class="grid grid-cols-2 items-center">
     <div class="flex flex-col justify-start gap-1 md:flex-row">
