--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const navs = [
 ];
 ---
 
-<header class="flex items-center gap-2 px-2 py-4 md:px-8">
+<header class="mb-12 flex items-center gap-2 px-2 py-4 md:px-8">
   <div class="flex-1">
     {
       `/${currentLocale}/` === url.pathname ? (
