--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,6 +5,7 @@
 @source './**/*.css';
 
 @theme {
+  /* this would remove all colors but for now we want them */
   /* --color-*: initial; */
   --color-black: #000;
 
@@ -24,6 +25,13 @@
   --color-primary-accent: var(--color-blue-300);
   --color-primary: var(--color-blue-500);
   --color-primary-solid: var(--color-blue-50);
+
+  --color-progress-0: transparent;
+  --color-progress-25: var(--color-red-500);
+  --color-progress-50: var(--color-orange-400);
+  --color-progress-75: var(--color-amber-400);
+  --color-progress-100: var(--color-yellow-300);
+  --color-progress-done: var(--color-green-500);
 
   --color-secondary-accent: var(--color-gray-300);
   --color-secondary: var(--color-gray-500);
