fix(design): make form two cols on large width
Ref: #34

--- a/src/pages/[lang]/[contact].astro
+++ b/src/pages/[lang]/[contact].astro
@@ -38,7 +38,7 @@ export const getStaticPaths = (async () => {
         {m.contact_error_try_later()}!
       </p>
     </Notification>
-    <div class="mb-6 flex flex-col gap-4 md:flex-row">
+    <div class="mb-6 flex flex-col gap-4 lg:flex-row">
       <div class="flex-1">
         <p>{m.contact_form_introduction()}.</p>
       </div>
