--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,7 +35,7 @@ const year = new Date().getFullYear();
   class="bg-primary-solid text-primary mt-12 flex flex-col gap-2 px-2 py-4 text-sm md:px-8"
 >
   <div class="grid grid-cols-2 items-center">
-    <div class="flex flex-col justify-start gap-1 md:flex-row">
+    <div class="flex flex-col justify-start gap-1 lg:flex-row">
       <div>{m.made_with()}</div>
       {
         tools.map(({ href, hreflang, text }) => (
@@ -46,7 +46,7 @@ const year = new Date().getFullYear();
       }
     </div>
     <div
-      class="flex flex-col items-end justify-start gap-1 self-stretch md:flex-row md:items-center md:justify-end"
+      class="flex flex-col items-end justify-start gap-1 self-stretch lg:flex-row lg:items-center lg:justify-end"
     >
       <span class="text-right">
         {m.mention_sevensquare()}
@@ -69,7 +69,7 @@ const year = new Date().getFullYear();
   </div>
   <hr />
   <div
-    class="flex flex-col-reverse items-center md:flex-row md:justify-between"
+    class="flex flex-col-reverse items-center lg:flex-row lg:justify-between"
   >
     <p>
       &copy;&nbsp;<span id="footer-year">{year}</span
