chore(setup): use # as prefix for internals instead of *
Ref: #38

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
-import * as m from "@messages/messages";
-import { Link } from "@components";
-import GithubLogo from "@images/design/github-mark.svg";
-import SevenSquareLogo from "@images/design/sevensquare.logo.svg";
+import * as m from "#messages/messages";
+import { Link } from "#components";
+import GithubLogo from "#images/design/github-mark.svg";
+import SevenSquareLogo from "#images/design/sevensquare.logo.svg";
 
 const tools = [
   {
