--- a/src/components/LanguageSwitcher.astro
+++ b/src/components/LanguageSwitcher.astro
@@ -1,5 +1,5 @@
 ---
-import { availableLanguageTags } from "@messages/runtime";
+import { availableLanguageTags } from "#messages/runtime";
 import { LanguageTag, Link } from "./";
 
 const { currentLocale } = Astro;
