--- a/src/components/LcnmqtIcon.astro
+++ b/src/components/LcnmqtIcon.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "@images/design/lcnmqt.icon.svg";
+import Icon from "#images/design/lcnmqt.icon.svg";
 
 // Note: we force class to define height or width or both as a minimum
 // Note: color of the logo can also be changed this way:
