--- a/src/components/VisualIndicator.astro
+++ b/src/components/VisualIndicator.astro
@@ -1,5 +1,5 @@
 ---
-import AnimatedVerticalBars from "@images/design/animated-vertical-bars.svg";
+import AnimatedVerticalBars from "#images/design/animated-vertical-bars.svg";
 
 type Props = {
   class?: string;
