--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import * as m from "@messages/messages";
-import { availableLanguageTags } from "@messages/runtime";
-import { LanguageTag, Link } from "@components";
-import BaseLayout from "@layouts/BaseLayout.astro";
+import * as m from "#messages/messages";
+import { availableLanguageTags } from "#messages/runtime";
+import { LanguageTag, Link } from "#components";
+import BaseLayout from "#layouts/BaseLayout.astro";
 ---
 
 <BaseLayout
