--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,9 +1,9 @@
 ---
 import type { GetStaticPaths } from "astro";
-import { LcnmqtLogo } from "@components";
-import BaseLayout from "@layouts/BaseLayout.astro";
-import * as m from "@messages/messages";
-import { availableLanguageTags } from "@messages/runtime";
+import { LcnmqtLogo } from "#components";
+import BaseLayout from "#layouts/BaseLayout.astro";
+import * as m from "#messages/messages";
+import { availableLanguageTags } from "#messages/runtime";
 
 const pageTitle = m.home_title();
 const description = m.home_meta_description();
