--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import * as m from "@messages/messages";
+import * as m from "#messages/messages";
 import { LanguageSwitcher, LcnmqtLogo, Link, SelfLink } from ".";
 
 const { currentLocale, url } = Astro;
