--- a/src/components/LanguageTag.astro
+++ b/src/components/LanguageTag.astro
@@ -1,5 +1,5 @@
 ---
-import { availableLanguageTags } from "@messages/runtime";
+import { availableLanguageTags } from "#messages/runtime";
 import { SelfLink } from ".";
 
 type Props = {
