--- a/src/components/LcnmqtLogo.astro
+++ b/src/components/LcnmqtLogo.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from "@images/design/lcnmqt.logo.svg";
+import Logo from "#images/design/lcnmqt.logo.svg";
 
 // Note: we force class to define height or width or both as a minimum
 // Note: color of the logo can also be changed this way:
