--- a/src/pages/[lang]/[thanks].astro
+++ b/src/pages/[lang]/[thanks].astro
@@ -1,9 +1,9 @@
 ---
 import type { GetStaticPaths } from "astro";
-import { Notification } from "@components";
-import BaseLayout from "@layouts/BaseLayout.astro";
-import * as m from "@messages/messages";
-import { availableLanguageTags } from "@messages/runtime";
+import { Notification } from "#components";
+import BaseLayout from "#layouts/BaseLayout.astro";
+import * as m from "#messages/messages";
+import { availableLanguageTags } from "#messages/runtime";
 
 const pageTitle = `${m.thanks_title()}!`;
 const notification = `${m.thanks_notification_success()}.`;
